--- a/src/chmconvert.py.in
+++ b/src/chmconvert.py.in
@@ -71,19 +71,19 @@ def main():
 	opts, args = getopt.getopt(sys.argv[1:], "hVo:",
 				   ["help", "version", "output"])
     except getopt.GetoptError:
-	usage()
-	sys.exit(1)
+        usage()
+        sys.exit(1)
 
     output = None
     for opt, arg in opts:
-	if opt in ("-h", "--help"):
-	    usage()
-	    sys.exit()
-	if opt in ("-V", "--version"):
-	    version()
-	    sys.exit()
-	if opt in ("-o", "--output"):
-	    output = arg
+        if opt in ("-h", "--help"):
+            usage()
+            sys.exit()
+        if opt in ("-V", "--version"):
+            version()
+            sys.exit()
+        if opt in ("-o", "--output"):
+            output = arg
 
     # Check that we have a least a filename
     if len(args) == 1:
@@ -126,7 +126,7 @@ def main():
     try:
         net = network_reader.fromfile(filein, fileformat = fileformat)
     except Exception, err:
-        sys.stderr.write("chmconvert_local: %s.\n" % err)
+        sys.stderr.write("chmconvert: %s.\n" % err)
         sys.exit(1)
     filein.close()
 
