--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-language: c
-before_install:
-- sudo apt-get install cython gfortran libhdf5-dev liblapack-dev libsundials-serial-dev python-h5py python-numpy
-script: ./bootstrap && ./configure CC=gcc FC=gfortran && make && make check
+language: nix
+script: nix-shell --run "./bootstrap && ./configure CC=gcc FC=gfortran && make && make check"
+
