Use /usr/bin/env in shebang for Python scripts
This is needed for Nix on Darwin. See:
https://discourse.nixos.org/t/python-wrapper-in-shebang/1058/4

--- a/src/plroute.py.in
+++ b/src/plroute.py.in
@@ -1,4 +1,4 @@
-#!@PYTHON@
+#!/usr/bin/env @PYTHON@
 #
 #  plroute - Plot the destruction/formation routes computed by
 #  astrochem for a given specie
